tests/pass/06_void_func.lang
функция приветствие(целое код) : пусто {
    печать(код);
}

функция main() : целое {
    приветствие(777);
    вернуть 0;
}
