tests/fail/06_wrong_return_type.lang
функция тест() : целое {
    вернуть истина; // Ошибка семантики: Тип возвращаемого значения не совпадает
}

функция main() : целое {
    вернуть 0;
}
